--- a/GTSW/Bumblebee/Bumblebee/MainWindow.xaml
+++ b/GTSW/Bumblebee/Bumblebee/MainWindow.xaml
@@ -188,7 +188,8 @@
                                                 <GridViewColumn Width="80">
                                                     <GridViewColumn.CellTemplate>
                                                         <DataTemplate>
-                                                            <Label Content="{Binding Path=CmdState, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
+                                                            <Label Content="{Binding Path=CmdState, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
+                                                                   Foreground ="{Binding Path=CmdStateForeground, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
                                                         </DataTemplate>
                                                     </GridViewColumn.CellTemplate>
                                                 </GridViewColumn>
@@ -235,7 +236,8 @@
                                                 <GridViewColumn Width="80">
                                                     <GridViewColumn.CellTemplate>
                                                         <DataTemplate>
-                                                            <Label Content="{Binding Path=CmdState, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
+                                                            <Label Content="{Binding Path=CmdState, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
+                                                                   Foreground ="{Binding Path=CmdStateForeground, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
                                                         </DataTemplate>
                                                     </GridViewColumn.CellTemplate>
                                                 </GridViewColumn>
@@ -316,7 +318,8 @@
                                             <GridViewColumn Width="80">
                                                 <GridViewColumn.CellTemplate>
                                                     <DataTemplate>
-                                                        <Label Content="{Binding Path=CmdState, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
+                                                        <Label Content="{Binding Path=CmdState, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
+                                                                   Foreground ="{Binding Path=CmdStateForeground, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
                                                     </DataTemplate>
                                                 </GridViewColumn.CellTemplate>
                                             </GridViewColumn>
@@ -358,7 +361,8 @@
                                             <GridViewColumn Width="80">
                                                 <GridViewColumn.CellTemplate>
                                                     <DataTemplate>
-                                                        <Label Content="{Binding Path=CmdState, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
+                                                        <Label Content="{Binding Path=CmdState, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
+                                                                   Foreground ="{Binding Path=CmdStateForeground, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
                                                     </DataTemplate>
                                                 </GridViewColumn.CellTemplate>
                                             </GridViewColumn>
@@ -374,7 +378,8 @@
             <TabControl Grid.Column="1">
                 <TabItem Header="操作日志">
                     <DockPanel>
-                        <DockPanel DockPanel.Dock="Top" Height="35">
+                        <DockPanel DockPanel.Dock="Top" Height="35"
+                                            IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
                             <Button DockPanel.Dock="Left" Margin="0,2,0,2" Click="ClearLog_Button_Click">
                                 <Button.Content>
                                     <DockPanel>
@@ -389,8 +394,8 @@
                                       HorizontalAlignment="Left" VerticalAlignment="Center"/>
                             <Grid/>
                         </DockPanel>
-                        <RichTextBox Margin="0,0,3,0" Name="rtxtLog" IsReadOnly="True" FontSize="13"
-                                     VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto" FontFamily="SimSun">
+                        <RichTextBox Margin="0,0,3,0" Name="rtxtLog" IsReadOnly="True" FontSize="13" FontFamily="SimSun"
+                                     VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto">
                             <RichTextBox.Resources>
                                 <Style TargetType="{x:Type Paragraph}">
                                     <Setter Property="Margin" Value="0"/>
@@ -410,8 +415,9 @@
                         </Grid.RowDefinitions>
                         <GroupBox Grid.Row="0" Margin="0,0,3,0" Header="计算机数据接收显示区">
                             <DockPanel>
-                                <DockPanel DockPanel.Dock="Bottom" Height="35">
-                                    <Button Content="清零" DockPanel.Dock="Left" Margin="3" Width="60"/>
+                                <DockPanel DockPanel.Dock="Bottom" Height="35"
+                                            IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                                    <Button Content="清零" DockPanel.Dock="Left" Margin="3" Width="60" Click="ClearReceivingNumber_Button_Click"/>
                                     <Label Content="{Binding Path=ReceivingByteNumberString,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                                            Width="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                                     <Button DockPanel.Dock="Right" Margin="0,2,0,2" Click="ClearRecv_Button_Click">
@@ -428,7 +434,7 @@
                                               HorizontalAlignment="Left" VerticalAlignment="Center"/>
                                     <Grid/>
                                 </DockPanel>
-                                <RichTextBox Margin="0,0,3,0" Name="rtxtRecv" IsReadOnly="True" FontSize="11"
+                                <RichTextBox Margin="0,0,3,0" Name="rtxtRecv" IsReadOnly="True" FontSize="13" FontFamily="SimSun"
                                              VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto">
                                     <RichTextBox.Resources>
                                         <Style TargetType="{x:Type Paragraph}">
@@ -445,8 +451,9 @@
                                       HorizontalAlignment="Stretch" VerticalAlignment="Bottom"/>
                         <GroupBox Grid.Row="1" Header="计算机数据发送显示区">
                             <DockPanel>
-                                <DockPanel DockPanel.Dock="Bottom" Height="35">
-                                    <Button Content="清零" DockPanel.Dock="Left" Margin="3" Width="60"/>
+                                <DockPanel DockPanel.Dock="Bottom" Height="35"
+                                            IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                                    <Button Content="清零" DockPanel.Dock="Left" Margin="3" Width="60" Click="ClearSendingNumber_Button_Click"/>
                                     <Label Content="{Binding Path=SendingByteNumberString,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                                                Width="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                                     <Button DockPanel.Dock="Right" Margin="0,2,0,2" Click="ClearSend_Button_Click">
@@ -463,7 +470,7 @@
                                               HorizontalAlignment="Left" VerticalAlignment="Center"/>
                                     <Grid/>
                                 </DockPanel>
-                                <RichTextBox Margin="0,0,3,0" Name="rtxtSend" IsReadOnly="True" FontSize="11"
+                                <RichTextBox Margin="0,0,3,0" Name="rtxtSend" IsReadOnly="True" FontSize="13" FontFamily="SimSun"
                                              VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto">
                                     <RichTextBox.Resources>
                                         <Style TargetType="{x:Type Paragraph}">
