--- a/GTSW/Bumblebee/Bumblebee/TimeoutConfiguration.xaml
+++ b/GTSW/Bumblebee/Bumblebee/TimeoutConfiguration.xaml
@@ -2,10 +2,12 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        Title="设置超时时间" Height="200" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="/Bumblebee;component/Resources/timeoutconfig.ico">
+        Title="设置超时时间" Height="260" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="/Bumblebee;component/Resources/timeoutconfig.ico">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="10"/>
+            <RowDefinition/>
+            <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
@@ -25,10 +27,20 @@
         <Label Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" Content="注 : 有的终端反应比较慢, 所以等待时间比较长." HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" Content="      该值如果设置较大, 则处理数据的时间将加长." HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" Content="      默认为1000ms, 超时将认为终端无反应." HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Grid.Row="5" Grid.Column="0" Content="读写间隔" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <Label Grid.Row="5" Grid.Column="2" Margin="30,0,0,0" Content="(ms)" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Grid.Row="6" Grid.Column="0" Content="命令间隔" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <Label Grid.Row="6" Grid.Column="2" Margin="30,0,0,0" Content="(ms)" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <xctk:IntegerUpDown  Grid.Column="1" Grid.Row="1" Margin="0,0,-30,0" Minimum="1000" Maximum="120000"
                              HorizontalAlignment="Stretch" VerticalAlignment="Center"
                              Value="{Binding Path=TimeOut,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <Button Grid.Row="6" Grid.Column="2" Margin="-80,2,10,2" Width="75" Content="确认" Click="OK_Button_Click"/>
-        <Button Grid.Row="6" Grid.Column="3" Margin="-45,2,2,2" Width="75" Content="取消" IsCancel="True" IsDefault="True" Click="Cancel_Button_Click"/>
+        <xctk:IntegerUpDown  Grid.Column="1" Grid.Row="5" Margin="0,0,-30,0" Minimum="1000" Maximum="10000"
+                             HorizontalAlignment="Stretch" VerticalAlignment="Center"
+                             Value="{Binding Path=WriteReadInterval,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+        <xctk:IntegerUpDown  Grid.Column="1" Grid.Row="6" Margin="0,0,-30,0" Minimum="1000" Maximum="10000"
+                             HorizontalAlignment="Stretch" VerticalAlignment="Center"
+                             Value="{Binding Path=CmdInterval,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+        <Button Grid.Row="8" Grid.Column="2" Margin="-80,2,10,2" Width="75" Content="确认" Click="OK_Button_Click"/>
+        <Button Grid.Row="8" Grid.Column="3" Margin="-45,2,2,2" Width="75" Content="取消" IsCancel="True" IsDefault="True" Click="Cancel_Button_Click"/>
     </Grid>
 </Window>
