--- a/GTSW/Bumblebee/Bumblebee/MainWindow.xaml
+++ b/GTSW/Bumblebee/Bumblebee/MainWindow.xaml
@@ -14,15 +14,19 @@
     <DockPanel>
         <Menu DockPanel.Dock="Top" Height="27">
             <MenuItem Header="文件">
-                <MenuItem Header="打开数据报表(PDF)" 
+                <MenuItem Header="打开数据报表(PDF)文件夹" Click="OpenPdfReportFolder_MenuItem_Click"
                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
-                          IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
+                          IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                    <MenuItem.Icon>
+                        <Image Source="/Bumblebee;component/Resources/openfolder.ico" Height="20" Style="{StaticResource ImageEnableDisableStyle}"/>
+                    </MenuItem.Icon>
+                </MenuItem>
                 <MenuItem Header="打开U盘数据文件(VDR)" 
                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                           IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
-                <MenuItem Header="打开U盘数据报表(PDF)" 
+                <!--MenuItem Header="打开U盘数据报表(PDF)" 
                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
-                          IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
+                          IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/-->
                 <Separator/>
                 <MenuItem Header="退出" Click="Window_Exit"
                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center">
