--- a/GTSW/Bumblebee/Bumblebee/MainWindow.xaml
+++ b/GTSW/Bumblebee/Bumblebee/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:bb="clr-namespace:Bumblebee"
-        Title="GB/T 19056-2013数据分析软件" Width="1000" Height="800" WindowStartupLocation="CenterScreen"
+        Title="GB/T 19056-2013数据分析软件" Width="800" Height="600" WindowStartupLocation="CenterScreen"
         Loaded="Window_Loaded" Icon="/Bumblebee;component/Resources/app.ico">
     <Window.Resources>
         <bb:Bools2BoolConverter x:Key="Bools2BoolConverter"/>
@@ -460,7 +460,7 @@
                                             IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
                                     <Button Content="清零" DockPanel.Dock="Left" Margin="3" Width="60" Click="ClearReceivingNumber_Button_Click"/>
                                     <Label Content="{Binding Path=ReceivingByteNumberString,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
-                                           Width="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                           Width="125" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                                     <Button DockPanel.Dock="Right" Margin="0,2,0,2" Click="ClearRecv_Button_Click">
                                         <Button.Content>
                                             <DockPanel>
@@ -470,7 +470,7 @@
                                             </DockPanel>
                                         </Button.Content>
                                     </Button>
-                                    <CheckBox Content="接收显示区自动清除" DockPanel.Dock="Right" Margin="0,0,5,0" IsThreeState="False"
+                                    <CheckBox Content="自动清除" DockPanel.Dock="Right" Margin="0,0,5,0" IsThreeState="False"
                                               IsChecked="{Binding Path=AutoClearRecv,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                                               HorizontalAlignment="Left" VerticalAlignment="Center"/>
                                     <Grid/>
@@ -496,7 +496,7 @@
                                             IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
                                     <Button Content="清零" DockPanel.Dock="Left" Margin="3" Width="60" Click="ClearSendingNumber_Button_Click"/>
                                     <Label Content="{Binding Path=SendingByteNumberString,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
-                                               Width="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                               Width="125" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                                     <Button DockPanel.Dock="Right" Margin="0,2,0,2" Click="ClearSend_Button_Click">
                                         <Button.Content>
                                             <DockPanel>
@@ -506,7 +506,7 @@
                                             </DockPanel>
                                         </Button.Content>
                                     </Button>
-                                    <CheckBox Content="发送显示区自动清除" DockPanel.Dock="Right" Margin="0,0,5,0" IsThreeState="False"
+                                    <CheckBox Content="自动清除" DockPanel.Dock="Right" Margin="0,0,5,0" IsThreeState="False"
                                               IsChecked="{Binding Path=AutoClearSend,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                                               HorizontalAlignment="Left" VerticalAlignment="Center"/>
                                     <Grid/>
